[package]
name = "tessera_language"
version = "0.1.0"
edition = "2024"
autobins = false
default-run = "tessera"

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
bitflags = "2.9.1"
bumpalo = { version = "3.19.0", features = ["std", "collections", "boxed"] }
clap = { version = "4.5.41", features = [
  "derive",
  "wrap_help",
  "string",
  "unicode",
] }
codespan-reporting = "0.12.0"
color-eyre = "0.6.5"
env_logger = "0.11.8"
gxhash = "3.5.0"
indexmap = { version = "2.10.0", features = ["rayon"] }
indextree = { version = "4.7.4", features = ["par_iter"] }
log = "0.4.27"
match_deref = "0.1.2"
memmap2 = "0.9.7"
ordered-float = "5.0.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
string_cache = "0.8.9"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "tessera_benchmark"
harness = false

[build-dependencies]
string_cache_codegen = "0.5.4"

[profile.dev]
opt-level = 0
codegen-units = 1024

[profile.dev.package."*"]
opt-level = 0

[profile.release]
strip = "debuginfo"
opt-level = 3
codegen-units = 1
lto = true

[profile.release.package."*"]
strip = "debuginfo"
opt-level = 3
